--- a/sub2/pom.xml
+++ b/sub2/pom.xml
@@ -9,5 +9,7 @@
 	<name>sub2</name>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>7</maven.compiler.source>
+		<maven.compiler.target>7</maven.compiler.target>
 	</properties>
 </project>
